parking-service/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: parking-service
  labels:
    app: parking-service
spec:
  ports:
  - port: 8081 # port number to access this service
    name: http
  selector:
    app: parking-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: parking-service-v1
spec:
  replicas: 1  # how many replicas we need for this deployment 
  template:
    metadata:
      labels:
        app: parking-service # pod name
        version: v1 # version
    spec:
      containers:
      - name: parking-service # container name to display
        image: gcr.io/fluted-elf-222418/parking-service:1.0.0 # image name
        imagePullPolicy: IfNotPresent
        env:   # pass env variables irrespective of environments. 
          - name: SPRING_PROFILES_ACTIVE
            value: dev
        ports:
        - containerPort: 8091
